src/components/MessageList/MessageList.css
/**
 * Copyright 2016 Dialog LLC <info@dlg.im>
 */
@import '../../styles/variables.css';

.container {
  all: initial;
}

.container {
  display: block;
  height: 100%;
}

.list {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  justify-content: flex-end;
  @apply --flex-fix;
}

